--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Rhys van der Waerden <rhys@effortstar.games>",
   "license": "UNLICENSED",
   "dependencies": {
+    "@tsconfig/node16": "^16.1.3",
     "@types/args": "^5.0.3",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.12.12",
